# backend/src/routes/v1/auth/index.ts
@@ -10,5 +10,6 @@ router.post("/login", validate(authValidation.login), authController.login);
 router.post("/logout", auth, authController.logout);
 router.post("/register", validate(authValidation.register), authController.register);
 router.post("/refresh", auth, authController.refreshTokens);
+router.post("/verify-email", validate(authValidation.verifyEmail), authController.verifyEmail)
 
 export default router;
